# L-Band-Decoders

./: .gitignore  CMakeLists.txt  README.md
CADU RSynchroderand/: CMakeLists.txt  README.md
CADU RSynchroderand/src/: deframer.cpp  main.cpp
CCSDS Demuxer/: CMakeLists.txt  README.md
CCSDS Demuxer/src/: ccsds.h  deframer.cpp  deframer.h  framer.cpp  framer.h  main.cpp  reedsolomon.cpp  reedsolomon.h  simpledeframer.cpp  simpledeframer.h
FengYun Decoder/: CMakeLists.txt  README.md
FengYun Decoder/src/: deframer.cpp  diff.cpp  diff.h  main.cpp  viterbi.cpp  viterbi.h
FengYun Decoder/src/getopt/: getopt.cpp
FengYun MWHS Decoder/: CMakeLists.txt
FengYun MWHS Decoder/src/: main.cpp  mwhs_reader.cpp  mwhs_reader.h
FengYun MWRI Decoder/: CMakeLists.txt
FengYun MWRI Decoder/src/: erm_reader.cpp  erm_reader.h  main.cpp
FengYun VIRR Decoder/: CMakeLists.txt  README.md
FengYun VIRR Decoder/src/: main.cpp  virr_deframer.cpp  virr_reader.cpp
Flowcharts/: FY3AB_Demod_GQRX.grc  FY3AB_Demod_SDRSharp.grc  FY3C_Demod_GQRX.grc  FY3C_Demod_SDRSharp.grc  MetOp_Demod_GQRX.grc  MetOp_Demod_SDRSharp.grc  Offline_MetOp_Demod_GQRX.grc  Offline_MetOp_Demod_SDRSharp.grc  README.md
METEOR BIS-M Decoder/: CMakeLists.txt  README.md
METEOR BIS-M Decoder/src/: main.cpp
METEOR Demodulator/: CMakeLists.txt  README.md
METEOR Demodulator/src/: agc.h  clock_recovery.cpp  main.cpp  moving_average.cpp  moving_average.h  rrc_filter.cpp  rrc_filter.h
METEOR Demuxer/: CMakeLists.txt  README.md
METEOR Demuxer/src/: deframer.cpp  deframer.h  main.cpp  simpledeframer.cpp
METEOR MSU-MR Decoder/: CMakeLists.txt  README.md
METEOR MSU-MR Decoder/src/: main.cpp  msumr_reader.cpp  msumr_reader.h
METEOR MTVZA Decoder/: CMakeLists.txt
METEOR MTVZA Decoder/src/: main.cpp
MetOp AMSU Decoder/: CMakeLists.txt
MetOp AMSU Decoder/src/: main.cpp
MetOp AVHRR Decoder/: CMakeLists.txt  README.md
MetOp AVHRR Decoder/src/: avhrr_reader.cpp  main.cpp
MetOp Decoder/: CMakeLists.txt  README.md
MetOp Decoder/src/: main.cpp  viterbi.cpp  viterbi.h
MetOp Demuxer/: CMakeLists.txt  README.md
MetOp Demuxer/src/: ccsds.h  deframer.cpp  deframer.h  framer.cpp  main.cpp
MetOp GOME-2 Decoder/: CMakeLists.txt
MetOp GOME-2 Decoder/src/: main.cpp
MetOp HIRS Decoder/: CMakeLists.txt
MetOp HIRS Decoder/src/: hirs_reader.cpp  hirs_reader.h  main.cpp
MetOp IASI Decoder/: CMakeLists.txt
MetOp IASI Decoder/src/: iasi_imaging_reader.cpp  main.cpp  utils.cpp
MetOp IASI Decoder/src/libccsds/: cadu.h  ccsds.cpp  ccsds.h  deframer.cpp  deframer.h  demuxer.cpp  demuxer.h  derandomizer.cpp  derandomizer.h  mpdu.cpp  mpdu.h  vcdu.cpp  vcdu.h
MetOp MHS Decoder/: CMakeLists.txt
MetOp MHS Decoder/src/: main.cpp  mhs_reader.cpp
NOAA AMSU Decoder/: CMakeLists.txt  README.md
NOAA AMSU Decoder/src/: main.cpp
NOAA AVHRR Decoder/: CMakeLists.txt  README.md
NOAA AVHRR Decoder/src/: avhrr_reader.cpp  avhrr_reader.h  main.cpp
NOAA Demodulator/: CMakeLists.txt  README.md
NOAA Demodulator/src/: agc.cpp  clock_recovery.h  deframer.cpp  main.cpp  pll.cpp  pll.h
NOAA Frame Extractor/: CMakeLists.txt  README.md
NOAA Frame Extractor/src/: main.cpp
NOAA HIRS Decoder/: CMakeLists.txt  README.md
NOAA HIRS Decoder/src/: TIP_reader.cpp  TIP_reader.h  main.cpp  noaa_frame_reader.cpp  noaa_frame_reader.h
NOAA MHS Decoder/: CMakeLists.txt  README.md
NOAA MHS Decoder/src/: main.cpp
QPSK Demodulator/: CMakeLists.txt  README.md
QPSK Demodulator/src/: agc.cpp  agc.h  clock_recovery.cpp  clock_recovery.h  costas.cpp  costas.h  main.cpp
