cmake_minimum_required (VERSION 3.0.0)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_subdirectory("CCSDS Demuxer")
add_subdirectory("FengYun Decoder")
add_subdirectory("FengYun VIRR Decoder")
add_subdirectory("METEOR BIS-M Decoder")
add_subdirectory("METEOR Demodulator")
add_subdirectory("METEOR Demuxer")
add_subdirectory("METEOR MSU-MR Decoder")
add_subdirectory("METEOR MTVZA Decoder")
add_subdirectory("MetOp AVHRR Decoder")
add_subdirectory("MetOp Decoder")
add_subdirectory("NOAA Demodulator")
add_subdirectory("QPSK Demodulator")
add_subdirectory("NOAA MHS Decoder")
add_subdirectory("NOAA AVHRR Decoder")
