cmake_minimum_required (VERSION 3.0.0)

include_directories(common_headers)

add_subdirectory("FengYun Decoder")
add_subdirectory("FengYun VIRR Decoder")
add_subdirectory("METEOR BIS-M Decoder")
add_subdirectory("METEOR Demuxer")
add_subdirectory("METEOR MSU-MR Decoder")
add_subdirectory("METEOR MTVZA Decoder")
add_subdirectory("MetOp AVHRR Decoder")
add_subdirectory("MetOp AMSU Decoder")
add_subdirectory("MetOp MHS Decoder")
add_subdirectory("MetOp HIRS Decoder")
add_subdirectory("MetOp IASI Decoder")
add_subdirectory("MetOp GOME-2 Decoder")
add_subdirectory("MetOp Decoder")
add_subdirectory("NOAA HIRS Decoder")
add_subdirectory("NOAA MHS Decoder")
add_subdirectory("NOAA AVHRR Decoder")
add_subdirectory("NOAA AMSU Decoder")
add_subdirectory("CADU RSynchroderand")
